// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ShowMoreButton renders correctly when at maxHeight 1`] = `
<div
  className="container"
>
  <div
    className="showMore"
    onClick={[Function]}
  >
    Show less
  </div>
</div>
`;

exports[`ShowMoreButton renders correctly when not at maxHeight 1`] = `
<div
  className="container"
>
  <div
    className="showMore"
    onClick={[Function]}
  >
    Show more
  </div>
</div>
`;
